# gidd

./: .gitignore  CMakeLists.txt  README.md  gidd.cpp  gidd.py
include/: dot_generator.hpp  file.hpp  gidd.hpp  gidd_utils.hpp  gml_generator.hpp  graph.hpp  output_generator.hpp  plantuml_generator.hpp
src/: CMakeLists.txt  dot_generator.cpp  file.cpp  gidd.cpp  gidd_utils.cpp  gml_generator.cpp  main.cpp  output_generator.cpp  plantuml_generator.cpp
src/output_generators/: dot_generator.cpp  gml_generator.cpp  output_generator.cpp  plantuml_generator.cpp
tests/: CMakeLists.txt  gidd_test.cpp
